moved the player and coordinates to separate classes

--- a/3dFps/3dFps.csproj
+++ b/3dFps/3dFps.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>_3dFps</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PlayerLib\PlayerLib.csproj" />
+  </ItemGroup>
+
 </Project>
